배포 설정 추가

--- a/pom.xml
+++ b/pom.xml
@@ -11,12 +11,15 @@
 	<groupId>com.moong</groupId>
 	<artifactId>notice</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
+	<!-- 배포 jar 설정 -->
+	<packaging>jar</packaging>
 	<name>notice</name>
 	<description>Demo project for Spring Boot</description>
 
 	<properties>
 		<java.version>1.8</java.version>
 		<maven-jar-plugin.version>3.1.1</maven-jar-plugin.version>
+		<encoding>UTF-8</encoding>
 	</properties>
 
 	<dependencies>
@@ -43,6 +46,13 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
+		</dependency>
+		
+		<!-- jar 배포를 위한 톰캣 설정 -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-tomcat</artifactId>
+			<scope>provided</scope>
 		</dependency>
 
 		<dependency>
@@ -75,8 +85,12 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+				<configuration>
+					<source>${java.version}</source>
+					<target>${java.version}</target>
+					<encoding>${encoding}</encoding>
+				</configuration>
 			</plugin>
 		</plugins>
 	</build>
-
 </project>
