--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,3 +22,8 @@ spring.thymeleaf.cache = false
 spring.freemarker.cache = false 
 
 #spring.devtools.livereload.enabled=true
+
+#encoding UTF-8 config
+spring.http.encoding.charset=UTF-8
+spring.http.encoding.enabled=true
+spring.http.encoding.force=true 
