--- a/pom.xml
+++ b/pom.xml
@@ -86,6 +86,7 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 				<configuration>
+					<executable>true</executable>
 					<source>${java.version}</source>
 					<target>${java.version}</target>
 					<encoding>${encoding}</encoding>
